Fix top align on Chrome

--- a/src/components/Dumbbell/Dumbbell.scss
+++ b/src/components/Dumbbell/Dumbbell.scss
@@ -80,8 +80,7 @@
   color: #cf4200;
   position: absolute;
   left: 50%;
-  top: 50%;
-  -webkit-transform: translateX(-100%) translateY(-75%);
+  -webkit-transform: translateX(-100%) translateY(-755%);
   transform: translateX(-100%) translateY(-75%);
   max-width: 60px;
   font-weight: bold;
